name:                   lpe
version:                0.1
synopsis:               LPE for TorXakis
license:                BSD3
license-file:           license.txt
author:                 Carsten Rutz

maintainer:             carstenruetz@gmx.de
copyright:              TNO
category:               Web
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src

  exposed-modules:    LPE
                      LPEfunc

  other-modules:      TranslatedProcDefs

  ghc-options:        -Wall -Werror -O2 -optc-O3 -optc-ffast-math

  build-depends:        base
                      , containers
                      , mtl
                      , text

                      , bexpr
                      , coreenv
                      , defs
                      , valexpr

  default-language:     Haskell2010

test-suite lpe-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       src
                      , test

  main-is:              TestMain.hs

  other-modules:        LPE
                      , LPEfunc
                      , TestDefinitions
                      , TestGNF
                      , TestLPE
                      , TestLPEPar
                      , TestLPEHide
                      , TestPreGNF
                      , TestPreGNFDisable
                      , TestLPEInterrupt
                      , TranslatedProcDefs

  ghc-options:       -Wall -Werror -O2 -optc-O3 -optc-ffast-math -threaded -rtsopts -with-rtsopts=-n
    -- -fmax-pmcheck-iterations=100000000 flag is deprecated, might need to be replaced with some value n in -fmax-pmcheck-models=n , but may just removing it will also work?


  build-depends:       base
                     , containers
                     , mtl
                     , text
                     , HUnit

                     , bexpr
                     , coreenv
                     , defs
                     , valexpr

  default-language:    Haskell2010
